crates/keron-lang/tests/corpus/errors/parse/reconcile_no_expr.snap
---
source: crates/keron-lang/tests/harness/mod.rs
assertion_line: 75
---
error: found end of input expected any, '#', '{', '-', '"', '"true"', '"false"', '"null"', int, '[', '"if"', '"for"', '"match"', identifier, or '('
  --> 2:1
  |
2 | 
  | ^
